--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
   <div class="popup" id="popup">
     <h2>Unlock Premium Bots</h2>
     <p>For unlocking Premium versions, please message us on WhatsApp. We will send you a QR for payment within 24 hours. <br>Under ₹999, unlock all Premium Bots.</p>
-    <button onclick="window.open('https://wa.me/+91 8999625371','_blank')">Message on WhatsApp</button>
+    <button onclick="window.open('https://wa.me/8999625371','_blank')">Message on WhatsApp</button>
   </div>
 
   <script>
@@ -253,3 +253,4 @@
   </script>
 </body>
 </html>
+
